# django-cryptography

./: README.md  pyproject.toml
src/app/: admin.py  forms.py  models.py
src/core/: settings.py
